--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a href="https://drive.google.com/file/d/1DMaN-JsHLRbs-W_B2FmWLFF8QPlZ0A8T/view?usp=drivesdk`"
+        <a href="https://drive.google.com/file/d/19sW-lfwlS7fK_gFbdUpToVyXiCDqhWEc/view?usp=sharing"
           class="btn btn--bg">RESUME</a>
       </div>
     </div>
@@ -151,7 +151,7 @@
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp2018
             </p>
           </div>
-          <a href="https://drive.google.com/file/d/1DMaN-JsHLRbs-W_B2FmWLFF8QPlZ0A8T/view?usp=drivesdk"
+          <a href="https://drive.google.com/file/d/19sW-lfwlS7fK_gFbdUpToVyXiCDqhWEc/view?usp=sharing"
             class="btn btn--med btn--theme dynamicBgClr">RESUME</a>
         </div>
         <div class="about__content-skills">
