--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/vaibhav-patil19">
                 <img class="main-footer__icon" src="./assets/png/linkedin-ico.png" alt="icon" />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://github.com/VB20010827">
+              <a target="_blank" rel="noreferrer" href="https://github.com/Vp2202">
                 <img class="main-footer__icon" src="./assets/png/github-ico.png" alt="icon" />
 
               </a>
